--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre nuestro exquisito café y deléitate con nuestras delicias de pastelería artesanal. ¡Sabor y calidad inigualables en cada bocado!">
+    <meta name="keywords" content="café, pastelería, artesanal, delicias, calidad, sabor">
+    <meta name="author" content="C-ivan-f">
     <title>CoffeShop</title>
     <link rel="stylesheet" href="./syles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
