--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Contáctanos para disfrutar del mejor café y pastelería artesanal! Encuentra nuestra ubicación y horarios. ¡Ven y deléitate con nosotros!">
+    <meta name="keywords" content="cafetería, pastelería, café, pastel, contacto, ubicación, horarios, dulces, delicias, artesanal">
     <title>Contactanos</title>
     <link rel="stylesheet" href="../syles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
