--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestra amplia variedad de productos de cafetería y pastelería. Desde deliciosos cafés hasta exquisitos pasteles, ¡encuentra tu placer culinario aquí!">
+    <meta name="keywords" content="productos, cafetería, pastelería, café, pastel, bebidas, dulces, especialidades, menú, selección, variedad">
     <title>Productos</title>
     <link rel="stylesheet" href="../syles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
