--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre la historia detrás de nuestra cafetería y pastelería. Conoce nuestro equipo apasionado y nuestra misión. ¡Únete a nuestra familia!">
+    <meta name="keywords" content="cafetería, pastelería, historia, equipo, misión, valores, café, pastel, cultura, pasión">
     <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="../syles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
