--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre nuestro exquisito café y deléitate con nuestras delicias de pastelería artesanal. ¡Sabor y calidad inigualables en cada bocado!">
+    <meta name="description"
+        content="Descubre nuestro exquisito café y deléitate con nuestras delicias de pastelería artesanal. ¡Sabor y calidad inigualables en cada bocado!">
     <meta name="keywords" content="café, pastelería, artesanal, delicias, calidad, sabor">
     <meta name="author" content="C-ivan-f">
     <title>CoffeShop</title>
@@ -120,14 +121,14 @@
     <div class="Derechos">
         <p>©2024 - <p class="NombreFooter">Iván Fernández</p> - Todos los derechos reservados.</p>
     </div>
+    <script src="https://kit.fontawesome.com/b666761307.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 
 </body>
-<script src="https://kit.fontawesome.com/b666761307.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
 
 </html>
