--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -2,90 +2,103 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre la historia detrás de nuestra cafetería y pastelería. Conoce nuestro equipo apasionado y nuestra misión. ¡Únete a nuestra familia!">
-    <meta name="keywords" content="cafetería, pastelería, historia, equipo, misión, valores, café, pastel, cultura, pasión">
-    <title>Sobre Nosotros</title>
-    <link rel="stylesheet" href="../syles/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="icon" href="../assets/icon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Descubre la historia detrás de nuestra cafetería y pastelería. Conoce nuestro equipo apasionado y nuestra misión. ¡Únete a nuestra familia!">
+  <meta name="keywords"
+    content="cafetería, pastelería, historia, equipo, misión, valores, café, pastel, cultura, pasión">
+  <title>Sobre Nosotros</title>
+  <link rel="stylesheet" href="../syles/styles.css">
+  <link rel="stylesheet" href="../sass/styles.css">
+  <link rel="stylesheet" href="../sass/styles.scss">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="icon" href="../assets/icon.png">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="../assets/b6e4a924395c745c5b681e478582f227.jpg" alt="Logo" height="80">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="./quienesSomos.html">Quienes somos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./galería.html">Galería</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contactanos.html">Contactanos</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="aboutUs">
-        <div class="sobreNosotrosTitulo">
-            <h1 class="tituloSobreNosotros">Sobre Nosotros</h1>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/b6e4a924395c745c5b681e478582f227.jpg" alt="Logo" height="80">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./quienesSomos.html">Quienes somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./galería.html">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactanos.html">Contactanos</a>
+            </li>
+          </ul>
         </div>
-    </main>
-    <div class="quienesSomosContenido">
-        <h2>Quienes Somos</h2>
-        <p>Nos dedicamos a ofrecer una experiencia excepcional donde cada taza de café y cada bocado de panadería son
-            cuidadosamente preparados para deleitar tus sentidos. Nos enorgullece seleccionar los mejores granos de café
-            y ingredientes frescos para garantizar una calidad insuperable en cada producto que servimos.</p>
-        <p>Desde nuestro café hasta nuestra panadería, cada detalle refleja nuestra pasión por la excelencia y el
-            compromiso con la comunidad. Nos esforzamos por ser más que una simple cafetería, aspiramos a ser un lugar
-            donde la buena compañía y los sabores exquisitos se fusionan para crear momentos memorables.</p>
-        <p>Te invitamos a ser parte de nuestra historia y a disfrutar de una experiencia cafetera única en "Baristas".
-            Ya sea para una pausa tranquila o una reunión animada, estamos aquí para satisfacer tus deseos y hacer que
-            cada visita sea inolvidable. ¡Esperamos verte pronto entre nuestras mesas!</p>
+      </div>
+    </nav>
+  </header>
+  <main class="aboutUs">
+    <div class="sobreNosotrosTitulo">
+      <h1 class="tituloSobreNosotros">Sobre Nosotros</h1>
     </div>
-    <footer class="footer mt-auto py-3 bg-dark">
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- Sección izquierda: Título y párrafo -->
-                <div class="col-md-4">
-                    <h5>Quiénes Somos</h5>
-                    <p>Somos una empresa dedicada a...</p>
-                </div>
-                <!-- Sección central: Logo -->
-                <div class="col-md-4 text-center">
-                    <img src="../assets/b6e4a924395c745c5b681e478582f227.jpg" alt="Logo" height="80" class="footer-logo">
-                </div>
-                <!-- Sección derecha: Redes sociales -->
-                <div class="col-md-4 text-md-end">
-                    <h5>Seguinos en Redes</h5>
-                    <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="me-3"><i class="fab fa-whatsapp"></i></a>
-                </div>
-            </div>
+  </main>
+  <div class="quienesSomosContenido">
+    <h2>Quienes Somos</h2>
+    <p>Nos dedicamos a ofrecer una experiencia excepcional donde cada taza de café y cada bocado de panadería son
+      cuidadosamente preparados para deleitar tus sentidos. Nos enorgullece seleccionar los mejores granos de café
+      y ingredientes frescos para garantizar una calidad insuperable en cada producto que servimos.</p>
+    <p>Desde nuestro café hasta nuestra panadería, cada detalle refleja nuestra pasión por la excelencia y el
+      compromiso con la comunidad. Nos esforzamos por ser más que una simple cafetería, aspiramos a ser un lugar
+      donde la buena compañía y los sabores exquisitos se fusionan para crear momentos memorables.</p>
+    <p>Te invitamos a ser parte de nuestra historia y a disfrutar de una experiencia cafetera única en "Baristas".
+      Ya sea para una pausa tranquila o una reunión animada, estamos aquí para satisfacer tus deseos y hacer que
+      cada visita sea inolvidable. ¡Esperamos verte pronto entre nuestras mesas!</p>
+  </div>
+  <div class="ubicacion">
+    <h2>Ubicanos</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6700.669751576016!2d-68.84550800780775!3d-32.88931328745882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e09199f7ac2e9%3A0x8b8f43dfc14e25df!2sStarbucks!5e0!3m2!1ses!2sar!4v1713935697026!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <footer class="footer mt-auto py-3 bg-dark">
+    <div class="container">
+      <div class="row align-items-center">
+        <!-- Sección izquierda: Título y párrafo -->
+        <div class="col-md-4">
+          <h5>Quiénes Somos</h5>
+          <p>Somos una empresa dedicada a...</p>
         </div>
-    </footer>
-    <div class="Derechos">
-        <p>©2024 - <p class="NombreFooter">Iván Fernández</p> - Todos los derechos reservados.</p>
+        <!-- Sección central: Logo -->
+        <div class="col-md-4 text-center">
+          <img src="../assets/b6e4a924395c745c5b681e478582f227.jpg" alt="Logo" height="80" class="footer-logo">
+        </div>
+        <!-- Sección derecha: Redes sociales -->
+        <div class="col-md-4 text-md-end">
+          <h5>Seguinos en Redes</h5>
+          <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="me-3"><i class="fab fa-whatsapp"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="Derechos">
+    <p>©2024 - <p class="NombreFooter">Iván Fernández</p> - Todos los derechos reservados.</p>
+    <script src="https://kit.fontawesome.com/b666761307.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
-<script src="https://kit.fontawesome.com/b666761307.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
